Fixing the overflow for info balloons.

--- a/hotels.css
+++ b/hotels.css
@@ -214,3 +214,5 @@ font-size: 30px;
 width: 100%;
 height: 100%;
 }
+
+.gm-style-iw{overflow:hidden}
